objects/Feature_Parameter_Integer_Snapshot__c.object
<CustomObject>
    <description>This object is used for reporting snapshots.
Related user story number is US-0024055.</description>
    <fields>
        <fullName>Feature_Parameter_Value__c</fullName>
        <label>Feature Parameter Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <label>Salesforce Org</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Feature Parameter Integer Snapshot</label>
    <nameField>
        <label>Feature Parameter Integer Snapshot Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Parameter Integer Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>